fixed bug with nav menu

--- a/src/app/components/fourzerofour/fourzerofour.component.html
+++ b/src/app/components/fourzerofour/fourzerofour.component.html
@@ -1,1 +1,11 @@
-<p>fourzerofour works!</p>
+<div class="bg-darkBlue w-full h-screen">
+  <app-navbar></app-navbar>
+  <div
+    class="w-full h-full bg-darkBlue text-center p-0 m-0 flex flex-col items-center justify-center"
+  >
+    <span class="text-almostWhite text-3xl"> Page Not Found </span>
+    <button class="font-mono bg-forestGreen text-lg text-center p-2 rounded">
+      Back to Home Page
+    </button>
+  </div>
+</div>
