--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,3 +1,48 @@
-<div class="bg-darkBlue w-full h-screen">
+<div class="bg-darkBlue w-full h-full">
   <app-navbar></app-navbar>
+  <section class="w-full h-auto flex overflow-hidden">
+    <div class="w-1/2 h-auto px-10 pt-4">
+      <h1
+        class="text-almostWhite text-7xl w-74 leading-snug bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text"
+      >
+        Hang out anytime, anywhere
+      </h1>
+      <p class="font-mono text-lg text-almostWhite mt-4">
+        Chat Bunker makes it easy and fun to stay close to your favorite people.
+      </p>
+      <form
+        [formGroup]="form"
+        (submit)="onSubmit()"
+        class="flex flex-col w-4/6 mt-4 h-40"
+      >
+        <input
+          type="email"
+          name="email"
+          placeholder="Email ddress or phone number"
+          formControlName="email"
+          class="my-2 outline-none border-none rounded-md py-1 px-2"
+        />
+        <input
+          type="password"
+          name="password"
+          placeholder="password"
+          formControlName="password"
+          class="my-2 outline-none border-none rounded-md py-1 px-2"
+        />
+        <button
+          class="bg-forestGreen text-darkBlue px-2 py-2 w-1/3 rounded-3xl mt-4"
+        >
+          Login
+        </button>
+      </form>
+    </div>
+    <div class="w-1/2 h-auto flex justify-center">
+      <img
+        src="/assets/chat-history-image.png"
+        alt="chat history image"
+        width="450"
+        height="400"
+      />
+    </div>
+  </section>
 </div>
