--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-darkBlue w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky t-0"
+  class="bg-darkBlue w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky top-0"
 >
   <img
     routerLink="/"
