added responsive styles for mobile

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="bg-darkBlue w-full h-full relative">
   <app-navbar></app-navbar>
-  <section class="w-full h-auto flex overflow-hidden">
-    <div class="w-1/2 h-auto px-10 pt-4">
+  <section class="w-full h-auto flex overflow-hidden max-[768px]:flex-col">
+    <div class="w-1/2 h-auto px-10 pt-4 max-[768px]:w-full">
       <h1
         class="text-almostWhite text-7xl w-74 leading-snug bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text"
       >
@@ -43,7 +43,7 @@
         </div>
       </form>
     </div>
-    <div class="w-1/2 h-1/2 flex justify-center">
+    <div class="w-1/2 h-1/2 flex justify-center max-[768px]:w-full">
       <img
         src="/assets/chat-history-image.png"
         alt="chat history image"
