added footer component

--- a/src/app/components/fourzerofour/fourzerofour.component.html
+++ b/src/app/components/fourzerofour/fourzerofour.component.html
@@ -1,10 +1,13 @@
-<div class="bg-darkBlue w-full h-screen">
+<div class="bg-slate-50 w-full h-screen">
   <app-navbar></app-navbar>
   <div
-    class="w-full h-full bg-darkBlue text-center p-0 m-0 flex flex-col items-center justify-center"
+    class="w-full h-full bg-slate-50 text-center p-0 m-0 flex flex-col items-center justify-center"
   >
-    <span class="text-almostWhite text-3xl"> Page Not Found </span>
-    <button class="font-mono bg-forestGreen text-lg text-center p-2 rounded">
+    <span class="text-slate-950 text-3xl"> Page Not Found </span>
+    <button
+      routerLink="/"
+      class="font-mono bg-blue-600 text-lg text-center p-2 rounded text-slate-50"
+    >
       Back to Home Page
     </button>
   </div>
