--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-darkBlue w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky top-0"
+  class="bg-slate-50 w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky top-0 shadow-[0_4px_2px_-2px_rgba(0,0,0,0.1)] min-[1300px]:relative bg-blue-600"
 >
   <img
     routerLink="/"
@@ -16,8 +16,8 @@
       <li
         *ngFor="let item of navList"
         [routerLink]="'/' + item"
-        routerLinkActive="underline decoration-almostWhite"
-        class="text-almostWhite text-lg cursor-pointer hover:underline decoration-almostWhite mx-4"
+        routerLinkActive="underline decoration-blue-600"
+        class="text-slate-950 text-lg cursor-pointer hover:underline decoration-blue-600 mx-4"
       >
         {{ item }}
       </li>
