added user component and jwt token

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,7 +1,7 @@
-<div class="bg-slate-50 w-full h-screen box-border relative max-w-7xl mx-auto">
+<div class="bg-slate-50 w-full h-screen box-border relative">
   <app-navbar></app-navbar>
   <div
-    class="w-full min-h-auto flex overflow-hidden max-[768px]:flex-col min-[1300px]:items-center"
+    class="w-full max-w-7xl mx-auto min-h-auto flex overflow-hidden max-[768px]:flex-col min-[1300px]:justify-center"
   >
     <div class="w-1/2 h-auto px-10 pt-4 max-[768px]:w-full min-[1300px]:w-full">
       <h1
