--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="bg-slate-50 w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky top-0 shadow-[0_4px_2px_-2px_rgba(0,0,0,0.1)] min-[1300px]:relative bg-blue-600"
+  class="bg-slate-50 w-full h-24 bg-darkBlue flex items-center justify-between px-6 sticky top-0 shadow-[0_4px_2px_-2px_rgba(0,0,0,0.1)] min-[1300px]:relative"
 >
   <img
     routerLink="/"
