--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<div class="w-full bg-[#ccc] h-20 sticky top-[100vh]">Footer works</div>
+<div class="w-full bg-[#FFFFFF] h-20 sticky top-[100vh] p-2">
+  <button class="capitalize decoration-blue-600 underline" routerLink="/">
+    home
+  </button>
+</div>
