--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -20,7 +20,6 @@
           #userEmail="ngModel"
           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
           required
-          (change)="getValue(userEmail)"
           [ngClass]="{
             'border-2 border-red-400': userEmail.touched && userEmail.invalid
           }"
@@ -45,7 +44,7 @@
 
       <div class="w-full h-auto relative my-4">
         <input
-          type="text"
+          type="password"
           autocomplete="off"
           class="font-sans w-full outline-none border border-gray-400 py-2 px-4 rounded-md focus:border-2 border-gray-900"
           placeholder="password"
@@ -72,6 +71,25 @@
         [disabled]="signupForm.invalid"
         class="bg-blue-600 text-slate-50 rounded-3xl w-2/3 p-2 font-sans disabled:cursor-not-allowed"
       >
+        <svg
+          *ngIf="loading"
+          class="animate-spin h-5 w-5 mr-3 ..."
+          viewBox="0 0 24 24"
+        >
+          <circle
+            class="opacity-25"
+            cx="12"
+            cy="12"
+            r="10"
+            stroke="currentColor"
+            stroke-width="4"
+          ></circle>
+          <path
+            class="opacity-75"
+            fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+          ></path>
+        </svg>
         Create account
       </button>
     </form>
