--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -69,11 +69,11 @@
 
       <button
         [disabled]="signupForm.invalid"
-        class="bg-blue-600 text-slate-50 rounded-3xl w-2/3 p-2 font-sans disabled:cursor-not-allowed"
+        class="flex justify-center items-center bg-blue-600 text-slate-50 rounded-3xl w-2/3 p-2 font-sans disabled:cursor-not-allowed"
       >
         <svg
           *ngIf="loading"
-          class="animate-spin h-5 w-5 mr-3 ..."
+          class="animate-spin h-[20px] w-[20px] mr-3 ..."
           viewBox="0 0 24 24"
         >
           <circle
@@ -90,7 +90,7 @@
             d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
           ></path>
         </svg>
-        Create account
+        <span> Create account </span>
       </button>
     </form>
   </div>
