--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -24,6 +24,11 @@
           formControlName="email"
           class="my-2 outline-none border border-0 rounded-xl py-2 px-3 bg-almostWhite font-bold font-mono max-[768px]:w-full"
         />
+        <span
+          class="text-red-500 text-[12px] font-sans font-bold"
+          *ngIf="form.controls.email.touched && form.controls.email.invalid"
+          >Please enter a valid Email</span
+        >
         <input
           type="password"
           name="password"
@@ -35,6 +40,7 @@
           class="flex flex-col justify-between w-full h-auto items-left max-[768px]:flex-col"
         >
           <button
+            [disabled]="form.invalid"
             (click)="onSubmit()"
             class="flex items-center justify-center bg-blue-600 text-slate-50 p-3 w-2/4 rounded-3xl mt-4 font-bold ease-in duration-300 max-[768px]:w-full hover:bg-blue-900"
           >
